Add link preview images

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: "SCS: Self-Contained Systems"
 description: Self-contained Systems (SCS) is a software architecture focused on a separation into independent systems - similar to microservices
+og_image: og-home.jpeg
 ---
 
 <header class="page-cover">
