Make anchor links actual links

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ og_image: og-home.jpeg
 			<div class="tile__img-container"><img src="img/characteristics-autonomous.svg" alt="autonomous" class="benefit-image-customizable"></div>
 			<div class="tile__heading">
 				<h3 class="tile__heading-text">Autonomous</h3>
-				<a id="autonomous" class="tile__heading-anchor">
+				<a id="autonomous" href="#autonomous" class="tile__heading-anchor">
 					<img src="img/anchor.svg" class="anchor-icon"/>
 				</a>
 			</div>
@@ -33,7 +33,7 @@ og_image: og-home.jpeg
 			<div class="tile__img-container"><img src="img/characteristics-one-team.svg" alt="scs own team" class="benefit-image-customizable"></div>
 			<div class="tile__heading">
 				<h3 class="tile__heading-text">One Team</h3>
-				<a id="one-team" class="tile__heading-anchor">
+				<a id="one-team" href="#one-team" class="tile__heading-anchor">
 					<img src="img/anchor.svg" class="anchor-icon"/>
 				</a>
 			</div>
@@ -43,7 +43,7 @@ og_image: og-home.jpeg
 			<div class="tile__img-container"><img src="img/characteristics-asynchronous-dependencies.svg" alt="asynchronous dependencies" class="benefit-image-customizable"></div>
 			<div class="tile__heading">
 				<h3 class="tile__heading-text">Asynchronous Dependencies</h3>
-				<a id="asynchronous-dependencies" class="tile__heading-anchor">
+				<a id="asynchronous-dependencies" href="#asynchronous-dependencies" class="tile__heading-anchor">
 					<img src="img/anchor.svg" class="anchor-icon"/>
 				</a>
 			</div>
@@ -63,7 +63,7 @@ og_image: og-home.jpeg
 			<div class="tile__img-container"><img src="img/charactersistics-own-data-and-logic.svg" alt="own data and business logic" class="benefit-image-customizable"></div>
 			<div class="tile__heading">
 				<h3 class="tile__heading-text">Own Data & Logic</h3>
-				<a id="own-data-and-logic" class="tile__heading-anchor">
+				<a id="own-data-and-logic" href="#own-data-and-logic" class="tile__heading-anchor">
 					<img src="img/anchor.svg" class="anchor-icon"/>
 				</a>
 			</div>
@@ -73,7 +73,7 @@ og_image: og-home.jpeg
 			<div class="tile__img-container"><img src="img/characteristics-own-ui.svg" alt="own ui" class="benefit-image-customizable"></div>
 			<div class="tile__heading">
 				<h3 class="tile__heading-text">Own UI</h3>
-				<a id="own-ui" class="tile__heading-anchor">
+				<a id="own-ui" href="#own-ui" class="tile__heading-anchor">
 					<img src="img/anchor.svg" class="anchor-icon"/>
 				</a>
 			</div>
@@ -83,7 +83,7 @@ og_image: og-home.jpeg
 			<div class="tile__img-container"><img src="img/characteristics-no-shared-business-logic.svg" alt="no shared business logic" class="benefit-image-customizable"></div>
 			<div class="tile__heading">
 				<h3 class="tile__heading-text">No Shared Business Logic</h3>
-				<a id="no-shared-business-logic" class="tile__heading-anchor">
+				<a id="no-shared-business-logic" href="#no-shared-business-logic" class="tile__heading-anchor">
 					<img src="img/anchor.svg" class="anchor-icon"/>
 				</a>
 			</div>
@@ -93,7 +93,7 @@ og_image: og-home.jpeg
 			<div class="tile__img-container"><img src="img/characteristics-hardly-shared-infrastructure.svg" alt="hardly shared infrastructure" class="benefit-image-customizable"></div>
 			<div class="tile__heading">
 				<h3 class="tile__heading-text">Hardly Shared Infrastructure</h3>
-				<a id="hardly-shared-infrastructure" class="tile__heading-anchor">
+				<a id="hardly-shared-infrastructure" href="#hardly-shared-infrastructure" class="tile__heading-anchor">
 					<img src="img/anchor.svg" class="anchor-icon"/>
 				</a>
 			</div>
