updates the license statement to Attribution-ShareAlike 4.0 International (CC BY-SA 4.0)

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ og_image: og-home.jpeg
 <section id="how-to-contribute" class="container container-spacing">
 	<p class="text-center">
 		Would you like to use this content?<br/>
-		Sure, SCS is licensed under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">creative commons attribution-sharealike 3.0 unported license</a>.
+		Sure, SCS is licensed under the <a href="https://creativecommons.org/licenses/by-sa/4.0/">Attribution-ShareAlike 4.0 International (CC BY-SA 4.0) license</a>.
 	</p>
 	<p class="text-centered">
 		You’ve got comments, questions, or suggestions?<br/>
