Tweak meta description

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "SCS: Self-Contained Systems"
-description: Self-contained Systems (SCS) is a software architecture focused on a separation into independent systems - similar to microservices
+description: "An architectural approach that separates a larger system’s functionality into many independent, collaborating systems."
 og_image: og-home.jpeg
 ---
 
