Tweak English copywriting

--- a/index.html
+++ b/index.html
@@ -193,19 +193,19 @@ og_image: og-home.jpeg
 			<div class="idea__img-container">
 				<img src="img/scs-ui.svg" alt="scs adheres to roca principles"/>
 			</div>
-			<p class="text-center idea-text">The user interface consists of web technologies that are composed according to	<b>ROCA principles.</b></p>
+			<p class="text-center idea-text">The user interface is comprised of web technologies, assembled in accordance with <b>ROCA principles.</b></p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container">
 				<img src="img/scs-optional-api.svg" alt="scs has an optional api"/>
 			</div>
-			<p class="text-center idea-text">Besides a web interface a self-contained system can provide an <b>optional API</b>.</p>
+			<p class="text-center idea-text">In addition to a web interface, a self-contained system can also provide an <b>optional API</b>.</p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container">
 				<img src="img/scs-autonomous-business-layer.svg" alt="scs has an autonomous business layer"/>
 			</div>
-			<p class="text-center idea-text">The business logic part <b>only</b> solves problems that arise in its core domain. This logic is only shared with other systems over a <b>well defined interface.</b></p>
+			<p class="text-center idea-text">The business logic part <b>solely</b> addresses problems that occur within its core domain. This logic is shared with other systems only through a <b>well defined interface.</b></p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container">
@@ -229,43 +229,43 @@ og_image: og-home.jpeg
 			<div class="idea__img-container">
 				<img src="img/scs-polyglot.svg" alt="polyglot persistence"/>
 			</div>
-			<p class="text-center idea-text">This enables <b>polyglot persistence</b>, which means a database can be chosen to solve a domain specific problem rather than to fulfill a technical urge.</p>
+			<p class="text-center idea-text">This enables <b>polyglot persistence</b>, implying a database can be selected to solve a domain specific problem, rather than to fulfill a technical urge.</p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container">
 				<img src="img/scs-technical-decisions.svg" alt="independent technical decisions"/>
 			</div>
-			<p class="text-center idea-text">Inside of a self-contained system a bunch of <b>technical decisions</b> can be made independently of other systems, such as programming language, frameworks, tooling or workflow.</p>
+			<p class="text-center idea-text">Within a self-contained system, a variety of technical decisions can be made independently from other systems, such as choices regarding programming language, frameworks, tooling, or workflow.</p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container">
 				<img src="img/scs-own-team.svg" alt="one scs one team"/>
 			</div>
-			<p class="text-center idea-text">The manageable domain specific scope enables the development, operation and maintenance of an SCS by a <b>single team.</b></p>
+			<p class="text-center idea-text">The manageable domain specific scope enables the development, operation, and maintenance of an SCS by a <b>single team.</b></p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container">
 				<img src="img/scs-web-interfaces.svg" alt="integration over web interfaces"/>
 			</div>
-			<p class="text-center idea-text">Self-contained Systems should be integrated over their <b>web interfaces</b> to minimize coupling to other systems.</p>
+			<p class="text-center idea-text">Self-contained Systems should be integrated via their <b>web interfaces</b> to minimize coupling to other systems.</p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container idea__img--large">
 				<img src="img/scs-hyperlinks.png" alt="hyperlinks to navigate between scs"/>
 			</div>
-			<p class="text-center idea-text">Therefore simple <b>hyperlinks</b> can be used to navigate between systems.</p>
+			<p class="text-center idea-text">Therefore, simple <b>hyperlinks</b> can be used to navigate between systems.</p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container idea__img--large">
 				<img src="img/scs-redirection.png" alt="redirection to ensure navigation works in both directions"/>
 			</div>
-			<p class="text-center idea-text">A <b>redirection</b> can be used to ensure navigation works in both directions.</p>
+			<p class="text-center idea-text"><b>Redirection</b> can be used to ensure navigation works in both directions.</p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container idea__img--large">
 				<img src="img/scs-dynamic-inclusion.png" alt="dynamic inclusion"/>
 			</div>
-			<p class="text-center idea-text">Hyperlinks can also support the <b>dynamic inclusion</b> of content that is served by another application into the web interface of a self-contained system.</p>
+			<p class="text-center idea-text">Hyperlinks can also facilitate the <b>dynamic inclusion</b> of content served by another application into the web interface of a self-contained system.</p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container">
@@ -277,13 +277,13 @@ og_image: og-home.jpeg
 			<div class="idea__img-container">
 				<img src="img/scs-asynchronous-api-calls.svg" alt="asynchronous remote api"/>
 			</div>
-			<p class="text-center idea-text">Instead remote API calls should be handled asynchronously to reduce dependencies and prevent error cascades.</p>
+			<p class="text-center idea-text">Instead, remote API calls should be handled asynchronously to minimize dependencies and prevent error cascades.</p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container">
 				<img src="img/scs-asynchronous-api-calls.svg" alt="relaxed model consistency"/>
 			</div>
-			<p class="text-center idea-text">This implies that – depending on the desired rate of updates – the data model’s consistency guarantees are <b>relaxed</b>.</p>
+			<p class="text-center idea-text">This implies that, depending on the desired rate of updates, the data model’s consistency guarantees may be <b>relaxed</b>.</p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container idea__img--large">
@@ -295,7 +295,7 @@ og_image: og-home.jpeg
 			<div class="idea__img-container idea__img--large">
 				<img src="img/scs-resilience.svg" alt="resilience"/>
 			</div>
-			<p class="text-center idea-text">Overall <b>resilience</b> is improved through loosely coupled, replaceable systems.</p>
+			<p class="text-center idea-text">Overall, <b>resilience</b> is improved through loosely coupled, replaceable systems.</p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container idea__img--large">
@@ -313,19 +313,20 @@ og_image: og-home.jpeg
 			<div class="idea__img-container idea__img--large">
 				<img src="img/scs-version2.svg" alt="no big bang release 2"/>
 			</div>
-			<p class="text-center idea-text">It is not necessary to perform a risky <b>big bang release</b> to migrate an outdated, monolithic system into a system of systems.</p>
+			<p class="text-center idea-text">It’s not necessary to carry out a risky <b>big bang release</b> to migrate an outdated, monolithic system into a system of systems.</p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container idea__img--large">
 				<img src="img/scs-evolutionary-modernization1.svg" alt="evolutionary modernization 1"/>
 			</div>
-			<p class="text-center idea-text">Instead a migration can happen in small, manageable steps which minimize the risk of failure and lead to an <b>evolutionary modernization</b>	of big and complex systems.</p>
+			<p class="text-center idea-text">
+				Instead, migration can occur in small, manageable steps that minimize the risk of failure and lead to an <b>evolutionary modernization</b> of large and complex systems.</p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container idea__img--large">
 				<img src="img/scs-evolutionary-modernization.svg" alt="evolutionary modernization 2"/>
 			</div>
-			<p class="text-center idea-text">Instead a migration can happen in small, manageable steps which minimize the risk of failure and lead to an <b>evolutionary modernization</b>	of big and complex systems.</p>
+			<p class="text-center idea-text">Instead, migration can occur in small, manageable steps that minimize the risk of failure and lead to an <b>evolutionary modernization</b> of large and complex systems.</p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container idea__img--large">
@@ -337,7 +338,7 @@ og_image: og-home.jpeg
 			<div class="idea__img-container idea__img--large">
 				<img src="img/scs-product.svg" alt="example of a standard product in an scs"/>
 			</div>
-			<p class="text-center idea-text">A product that fits well in a system of systems can be chosen by the following aspects: It has to solve a <b>defined set of tasks</b> and provide the same <b>integration mechanisms</b> that a self-contained system offers.</p>
+			<p class="text-center idea-text">A product that fits well into a system of systems can be selected based on the following aspects: it should solve a <b>defined set of tasks</b> and provide the same <b>integration mechanisms</b> that a self-contained system offers.</p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container idea__img--large">
@@ -355,7 +356,7 @@ og_image: og-home.jpeg
 			<div class="idea__img-container idea__img--large">
 				<img src="img/scs-uniform-interfaces.svg" alt="uniform interface for all scs"/>
 			</div>
-			<p class="text-center idea-text">If a product with such integration mechanisms can not be found, it should at least be possible to extend that product with <b>uniform interfaces</b> that integrate well with the rest of the system.</p>
+			<p class="text-center idea-text">If a product with such integration mechanisms cannot be found, it should at least be possible to extend that product with <b>uniform interfaces</b> that integrate smoothly with the rest of the system.</p>
 		</div>
 	</div>
 </section>
