--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "SCS: Self-Contained Systems"
+title: "SCS: Self-contained Systems"
 description: "An architectural approach that separates a larger system’s functionality into many independent, collaborating systems."
 og_image: og-home.jpeg
 ---
