Add slide deck download links

--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@ og_image: og-home.jpeg
 
 <section id="the-idea" class="container container-spacing">
 	<h2 class="text-centered">The Idea</h2>
+	<p>This content is also available in slide deck format:</p>
+	<ul>
+		<li>English: <a href="slidedeck/en/scs-infodeck-english.pdf">PDF</a>, <a href="slidedeck/en/scs-infodeck-english.key">Keynote</a>, <a href="slidedeck/en/scs-infodeck-english.pptx">PowerPoint</a></li>
+		<li>English: <a href="slidedeck/de/scs-infodeck-deutsch.pdf">PDF</a>, <a href="slidedeck/en/scs-infodeck-deutsch.key">Keynote</a>, <a href="slidedeck/en/scs-infodeck-deutsch.pptx">PowerPoint</a></li>
+	</ul>
 	<div class="container-with-the-idea">
 		<div class="idea">
 			<div class="idea__img-container">
