--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ og_image: og-home.jpeg
 	<p>This content is also available in slide deck format:</p>
 	<ul>
 		<li>English: <a href="slidedeck/en/scs-infodeck-english.pdf">PDF</a>, <a href="slidedeck/en/scs-infodeck-english.key">Keynote</a>, <a href="slidedeck/en/scs-infodeck-english.pptx">PowerPoint</a></li>
-		<li>English: <a href="slidedeck/de/scs-infodeck-deutsch.pdf">PDF</a>, <a href="slidedeck/en/scs-infodeck-deutsch.key">Keynote</a>, <a href="slidedeck/en/scs-infodeck-deutsch.pptx">PowerPoint</a></li>
+		<li>German: <a href="slidedeck/de/scs-infodeck-deutsch.pdf">PDF</a>, <a href="slidedeck/en/scs-infodeck-deutsch.key">Keynote</a>, <a href="slidedeck/en/scs-infodeck-deutsch.pptx">PowerPoint</a></li>
 	</ul>
 	<div class="container-with-the-idea">
 		<div class="idea">
