add missing link to index#service-api-is-optional

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ og_image: og-home.jpeg
 			<div class="tile__img-container"><img src="img/charactersitics-service-api-is-optional.svg" alt="service api optional" class="benefit-image-customizable"></div>
 			<div class="tile__heading">
 				<h3 class="tile__heading-text">Service API is Optional</h3>
-				<a id="service-api-is-optional" class="tile__heading-anchor">
+				<a id="service-api-is-optional" href="#service-api-is-optional" class="tile__heading-anchor">
 					<img src="img/anchor.svg" class="anchor-icon"/>
 				</a>
 			</div>
