fixes slide deck download links
- repairs german links
- adds OpenDocument format
- put download links below content as suggested by vanto, here in trailer with general information
- repairs ROCA link formatting

--- a/index.html
+++ b/index.html
@@ -104,11 +104,6 @@ og_image: og-home.jpeg
 
 <section id="the-idea" class="container container-spacing">
 	<h2 class="text-centered">The Idea</h2>
-	<p>This content is also available in slide deck format:</p>
-	<ul>
-		<li>English: <a href="slidedeck/en/scs-infodeck-english.pdf">PDF</a>, <a href="slidedeck/en/scs-infodeck-english.key">Keynote</a>, <a href="slidedeck/en/scs-infodeck-english.pptx">PowerPoint</a></li>
-		<li>German: <a href="slidedeck/de/scs-infodeck-deutsch.pdf">PDF</a>, <a href="slidedeck/en/scs-infodeck-deutsch.key">Keynote</a>, <a href="slidedeck/en/scs-infodeck-deutsch.pptx">PowerPoint</a></li>
-	</ul>
 	<div class="container-with-the-idea">
 		<div class="idea">
 			<div class="idea__img-container">
@@ -198,7 +193,7 @@ og_image: og-home.jpeg
 			<div class="idea__img-container">
 				<img src="img/scs-ui.svg" alt="The user interface consists of web technologies, assembled in accordance with ROCA principles (cf. https://roca-style.org for more information on ROCA)."/>
 			</div>
-			<p class="text-center idea-text">The user interface consists of web technologies, assembled in accordance with <a href="https://roca-style.org/">ROCA principles.</a></p>
+			<p class="text-center idea-text">The user interface consists of web technologies, assembled in accordance with <a class="idea-text__link" href="https://roca-style.org/">ROCA principles.</a></p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container">
@@ -370,6 +365,11 @@ og_image: og-home.jpeg
 	<p class="text-center">
 		Would you like to use this content?<br/>
 		Sure, SCS is licensed under the <a href="https://creativecommons.org/licenses/by-sa/4.0/">Attribution-ShareAlike 4.0 International (CC BY-SA 4.0) license</a>.
+	</p>
+	<p class="text-center">
+		Would you like to have <a href="#the-idea">the idea</a> in slide deck format? There you go:<br/>
+		English: <a href="slidedeck/en/scs-infodeck-english.pdf">PDF</a>, <a href="slidedeck/en/scs-infodeck-english.key">Keynote</a>, <a href="slidedeck/en/scs-infodeck-english.pptx">PowerPoint</a>, <a href="slidedeck/en/scs-infodeck-english.odp">OpenDocument</a>
+		German: <a href="slidedeck/de/scs-infodeck-deutsch.pdf">PDF</a>, <a href="slidedeck/de/scs-infodeck-deutsch.key">Keynote</a>, <a href="slidedeck/de/scs-infodeck-deutsch.pptx">PowerPoint</a>, <a href="slidedeck/de/scs-infodeck-deutsch.odp">OpenDocument</a>
 	</p>
 	<p class="text-centered">
 		You have got comments, questions, or suggestions?<br/>
