--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ og_image: og-home.jpeg
 			<div class="tile__heading">
 				<h3 class="tile__heading-text">Autonomous</h3>
 				<a id="autonomous" href="#autonomous" class="tile__heading-anchor">
-					<img src="img/anchor.svg" class="anchor-icon"/>
+					<img src="img/anchor.svg" class="anchor-icon" alt="Anchor link to this section" />
 				</a>
 			</div>
 			<p class="text-center">Each SCS is an autonomous web application. For the SCS’s domain, all data, the logic to process that data and all code to render the web interface is contained within the SCS. An SCS can fulfill its primary use cases on its own, without having to rely on other systems being available.</p>
@@ -34,7 +34,7 @@ og_image: og-home.jpeg
 			<div class="tile__heading">
 				<h3 class="tile__heading-text">One Team</h3>
 				<a id="one-team" href="#one-team" class="tile__heading-anchor">
-					<img src="img/anchor.svg" class="anchor-icon"/>
+					<img src="img/anchor.svg" class="anchor-icon" alt="Anchor link to this section" />
 				</a>
 			</div>
 			<p class="text-center">Each SCS is owned by one team. This does not necessarily mean that only one team can change the code, but the owning team has the final say on what goes into the code base, for example by merging pull-requests.</p>
@@ -44,7 +44,7 @@ og_image: og-home.jpeg
 			<div class="tile__heading">
 				<h3 class="tile__heading-text">Asynchronous Dependencies</h3>
 				<a id="asynchronous-dependencies" href="#asynchronous-dependencies" class="tile__heading-anchor">
-					<img src="img/anchor.svg" class="anchor-icon"/>
+					<img src="img/anchor.svg" class="anchor-icon" alt="Anchor link to this section" />
 				</a>
 			</div>
 			<p class="text-center">Communication with other SCSs or 3rd party systems is asynchronous wherever possible. Specifically, other SCSs or external systems should not be accessed synchronously within the SCS's own request/response cycle. This decouples the systems, reduces the effects of failure, and thus supports autonomy. The goal is decoupling concerning time: An SCS should work even if other SCSs are temporarily offline. This can be achieved even if the communication on the technical level is synchronous, e.g. by replicating data or buffering requests.</p>
@@ -54,7 +54,7 @@ og_image: og-home.jpeg
 			<div class="tile__heading">
 				<h3 class="tile__heading-text">Service API is Optional</h3>
 				<a id="service-api-is-optional" href="#service-api-is-optional" class="tile__heading-anchor">
-					<img src="img/anchor.svg" class="anchor-icon"/>
+					<img src="img/anchor.svg" class="anchor-icon" alt="Anchor link to this section" />
 				</a>
 			</div>
 			<p class="text-center">An SCS can have an optional service API. Because the SCS has its own web UI, it can interact with the user — without going through a UI service. However, an API for mobile clients or for other SCSs might still be useful.</p>
@@ -64,7 +64,7 @@ og_image: og-home.jpeg
 			<div class="tile__heading">
 				<h3 class="tile__heading-text">Own Data & Logic</h3>
 				<a id="own-data-and-logic" href="#own-data-and-logic" class="tile__heading-anchor">
-					<img src="img/anchor.svg" class="anchor-icon"/>
+					<img src="img/anchor.svg" class="anchor-icon" alt="Anchor link to this section" />
 				</a>
 			</div>
 			<p class="text-center">Each SCS must include data and logic. To really implement any meaningful features both are needed. An SCS should implement features by itself and must therefore include both.</p>
@@ -74,7 +74,7 @@ og_image: og-home.jpeg
 			<div class="tile__heading">
 				<h3 class="tile__heading-text">Own UI</h3>
 				<a id="own-ui" href="#own-ui" class="tile__heading-anchor">
-					<img src="img/anchor.svg" class="anchor-icon"/>
+					<img src="img/anchor.svg" class="anchor-icon" alt="Anchor link to this section" />
 				</a>
 			</div>
 			<p class="text-center">An SCS should make its features usable to end-users via its own UI. Therefore the SCS should have no shared UI with other SCSs. SCSs might still have links to each other. However, asynchronous integration means that the SCS should still work even if the UI of another SCS is not available.</p>
@@ -84,7 +84,7 @@ og_image: og-home.jpeg
 			<div class="tile__heading">
 				<h3 class="tile__heading-text">No Shared Business Logic</h3>
 				<a id="no-shared-business-logic" href="#no-shared-business-logic" class="tile__heading-anchor">
-					<img src="img/anchor.svg" class="anchor-icon"/>
+					<img src="img/anchor.svg" class="anchor-icon" alt="Anchor link to this section" />
 				</a>
 			</div>
 			<p class="text-center">To avoid tight coupling an SCS should share no business code with other SCSs. It might be fine to create a pull-request for an SCS or use common libraries, e.g. database drivers or oAuth clients.</p>
@@ -94,7 +94,7 @@ og_image: og-home.jpeg
 			<div class="tile__heading">
 				<h3 class="tile__heading-text">Hardly Shared Infrastructure</h3>
 				<a id="hardly-shared-infrastructure" href="#hardly-shared-infrastructure" class="tile__heading-anchor">
-					<img src="img/anchor.svg" class="anchor-icon"/>
+					<img src="img/anchor.svg" class="anchor-icon" alt="Anchor link to this section" />
 				</a>
 			</div>
 			<p class="text-center">To make SCSs more robust and improve decoupling shared infrastructure can be minimized. E.g. a shared database make fail safeness and scalability of the SCSs depend on the central database. However, due to e.g. costs a shared database with separate schemas or data models per SCS can be a valid alternative.</p>
