Fix pages not being indexed by search engines by declaring canonical URLs
I don’t see any chance to establish canonical redirects with the current Jekyll/GitHub pages setup

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 title: "SCS: Self-contained Systems"
 description: "An architectural approach that separates a larger system’s functionality into many independent, collaborating systems."
 og_image: og-home.jpeg
+canonical_url: https://scs-architecture.org/index.html
 ---
 
 <header class="page-cover">
@@ -11,7 +12,7 @@ og_image: og-home.jpeg
 		<div class="page-cover-content">
 			<h1>Self-contained Systems (SCS)</h1>
 			<h2>An architectural approach that separates a larger system’s functionality into many independent, collaborating systems.</h2>
-			<p>Created by <img src="img/INNOQ_Logo-primary.svg" alt="INNOQ" class="logo-small" />. Driven by the community.</p>
+			<p>Created by <img src="/img/INNOQ_Logo-primary.svg" alt="INNOQ" class="logo-small" />. Driven by the community.</p>
 		</div>
 	</div>
 </header>
