Fix canonical root URL

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: "SCS: Self-contained Systems"
 description: "An architectural approach that separates a larger system’s functionality into many independent, collaborating systems."
 og_image: og-home.jpeg
-canonical_url: https://scs-architecture.org/index.html
+canonical_url: https://scs-architecture.org/
 ---
 
 <header class="page-cover">
