Fix line breaks, link to X profile

--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@ canonical_url: https://scs-architecture.org/
 		Checkout the <a href="faq.html">FAQ</a> or create an <a href="https://github.com/innoq/SCS/issues">issue</a>.
 	</p>
 	<p class="text-centered">
-		Contribute on <a href="https://github.com/innoq/SCS">Github</a>.
+		Contribute on <a href="https://github.com/innoq/SCS">Github</a>.<br>
+		Find us on <a href="https://x.com/scsarchitecture">X (Twitter)</a>
 	</p>
 </section>
