adapts on index.html the idea that there are different texts per image.

--- a/index.html
+++ b/index.html
@@ -306,28 +306,27 @@ canonical_url: https://scs-architecture.org/
 		</div>
 		<div class="idea">
 			<div class="idea__img-container idea__img--large">
-				<img loading="lazy" src="img/scs-version1.svg" alt="It is not necessary to perform a risky big bang release to migrate an outdated, monolithic system into a system of systems."/>
+				<img loading="lazy" src="img/scs-version1.svg" alt="It is not necessary to perform a risky big bang release to migrate an outdated, monolithic system ..."/>
 			</div>
-			<p class="text-center idea-text">It is not necessary to perform a risky <b>big bang release</b> to migrate an outdated, monolithic system into a system of systems.</p>
+			<p class="text-center idea-text">It is not necessary to perform a risky <b>big bang release</b> to migrate an outdated, monolithic system …</p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container idea__img--large">
-				<img loading="lazy" src="img/scs-version2.svg" alt="It is not necessary to carry out a risky <b>big bang release</b> to migrate an outdated, monolithic system into a system of systems."/>
+				<img loading="lazy" src="img/scs-version2.svg" alt="... into a system of systems."/>
 			</div>
-			<p class="text-center idea-text">It is not necessary to carry out a risky <b>big bang release</b> to migrate an outdated, monolithic system into a system of systems.</p>
+			<p class="text-center idea-text">… into a system of systems.</p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container idea__img--large">
-				<img loading="lazy" src="img/scs-evolutionary-modernization1.svg" alt="Instead, migration can occur in small, manageable steps that minimize the risk of failure and lead to an evolutionary modernization of large and complex systems."/>
+				<img loading="lazy" src="img/scs-evolutionary-modernization1.svg" alt="An evolutionary modernization of a large and complex system can be done by ..."/>
 			</div>
-			<p class="text-center idea-text">
-				Instead, migration can occur in small, manageable steps that minimize the risk of failure and lead to an <b>evolutionary modernization</b> of large and complex systems.</p>
+			<p class="text-center idea-text">An <b>evolutionary modernization</b> of a large and complex system can be done by …</p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container idea__img--large">
-				<img loading="lazy" src="img/scs-evolutionary-modernization.svg" alt="Instead, migration can occur in small, manageable steps that minimize the risk of failure and lead to an evolutionary modernization of large and complex systems."/>
+				<img loading="lazy" src="img/scs-evolutionary-modernization.svg" alt="... migrating in small, manageable steps and by that minimizing the risk of failure."/>
 			</div>
-			<p class="text-center idea-text">Instead, migration can occur in small, manageable steps that minimize the risk of failure and lead to an <b>evolutionary modernization</b> of large and complex systems.</p>
+			<p class="text-center idea-text">… migrating in small, manageable steps and by that minimizing the risk of failure.</p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container idea__img--large">
@@ -343,15 +342,15 @@ canonical_url: https://scs-architecture.org/
 		</div>
 		<div class="idea">
 			<div class="idea__img-container idea__img--large">
-				<img loading="lazy" src="img/scs-standard-products.svg" alt="This ensures that products can be replaced safely by other products once their lifetime has ended."/>
+				<img loading="lazy" src="img/scs-standard-products.svg" alt="This ensures that products can be replaced safely ..."/>
 			</div>
-			<p class="text-center idea-text">This ensures that products can be <b>replaced safely</b> by other products once their lifetime has ended.</p>
+			<p class="text-center idea-text">This ensures that products can be <b>replaced safely</b> …</p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container idea__img--large">
-				<img loading="lazy" src="img/scs-with-standard-software-new.svg" alt="This ensures that products can be replaced safely by other products once their lifetime has ended."/>
+				<img loading="lazy" src="img/scs-with-standard-software-new.svg" alt="... by other products once their lifetime has ended."/>
 			</div>
-			<p class="text-center idea-text">This ensures that products can be <b>replaced safely</b> by other products once their lifetime has ended.</p>
+			<p class="text-center idea-text">… by other products once their lifetime has ended.</p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container idea__img--large">
