Update three info graphics

--- a/index.html
+++ b/index.html
@@ -252,19 +252,19 @@ canonical_url: https://scs-architecture.org/
 		</div>
 		<div class="idea">
 			<div class="idea__img-container idea__img--large">
-				<img loading="lazy" src="img/scs-hyperlinks.png" alt="Therefore, simple hyperlinks can be used to navigate between systems."/>
+				<img loading="lazy" src="img/scs-hyperlinks.svg" alt="Therefore, simple hyperlinks can be used to navigate between systems."/>
 			</div>
 			<p class="text-center idea-text">Therefore, simple <b>hyperlinks</b> can be used to navigate between systems.</p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container idea__img--large">
-				<img loading="lazy" src="img/scs-redirection.png" alt="Redirection can be used to ensure navigation works in both directions."/>
+				<img loading="lazy" src="img/scs-redirection.svg" alt="Redirection can be used to ensure navigation works in both directions."/>
 			</div>
 			<p class="text-center idea-text"><b>Redirection</b> can be used to ensure navigation works in both directions.</p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container idea__img--large">
-				<img loading="lazy" src="img/scs-dynamic-inclusion.png" alt="Hyperlinks can also facilitate the dynamic inclusion of content served by another application into the web interface of a self-contained system."/>
+				<img loading="lazy" src="img/scs-dynamic-inclusion.svg" alt="Hyperlinks can also facilitate the dynamic inclusion of content served by another application into the web interface of a self-contained system."/>
 			</div>
 			<p class="text-center idea-text">Hyperlinks can also facilitate the <b>dynamic inclusion</b> of content served by another application into the web interface of a self-contained system.</p>
 		</div>
